<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tampere Pysäkkivahti</string>
    <string name="action_manage">Manage stops</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_rename">Rename</string>
    <string name="action_edit_rename_msg">Leave empty to restore original</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">Select stop to show departures</string>
    <string name="manage_header">Drag number to order, hold name to edit</string>
    <string name="empty">No departures</string>
    <string name="empty_stop">No stops, add them from the menu.</string>
    <string name="title_activity_manage">Manage stops</string>
    <string name="title_activity_add_stop">Add stop</string>
    <string name="new_stop_hint">Stop name or number</string>
    <string name="save_new_stop">Save</string>
    <string name="clear_new_stop">Reset</string>
    <string name="stop_added">Stop added</string>
    <string name="stop_exists">Stop already exists</string>
    <string name="stop_deleted">Stop deleted</string>
    <string name="stop_renamed">Stop renamed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pref_show_line_number">Show line number?</string>
    <string name="pref_show_line_number_summary">Whether to show or hide stop number on stop list. Requires application restart.</string>
    <string name="pref_use_compact_style">Use compact departure style</string>
    <string name="pref_use_compact_style_summary">Shows all information on 1 row. Might save some vertical space.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_version">version</string>
    <string name="author_name">Hannu-Pekka Heinäjärvi</string>
    <string name="author_www">http://github.com/hannupekka</string>
    <string name="author_twitter">http://twitter.com/hp_heinajarvi</string>
    <string name="widget_target_stop_title">Select stop to show in widget</string>
    <string name="title_activity_add_stop_tabs">Add stop</string>
    <string name="title_section_search">Search</string>
    <string name="title_section_map">Map</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading...</string>
    <string name="add_stop">Add stop?</string>
    <string name="remove_stop">Remove stop?</string>
    <string name="stop_add_delete">Click here to add or remove stop.</string>
    <string name="error">Error</string>
    <string name="error_message">Unable to download stop data. Check network connectivity and try again later.</string>
    <string name="pref_enable_map">Enable map?</string>
    <string name="pref_enable_map_summary">Enables map for managing stops.</string>

</resources>