<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:text="@string/about_version"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/app_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/app_version"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_version"
        android:layout_marginTop="24dp"
        android:text="@string/author_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/author_www"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_name"
        android:autoLink="web"
        android:text="@string/author_www"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/author_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_www"
        android:autoLink="web"
        android:text="@string/author_twitter"
        android:textSize="16sp" />

</RelativeLayout>