<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.hpheinajarvi.tamperepysakkivahti.AddStopActivity$PlaceholderFragment" >

    <AutoCompleteTextView
        android:id="@+id/new_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_stop_hint" >

        <requestFocus />
    </AutoCompleteTextView>

    <LinearLayout
        android:id="@+id/button_holder"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_stop"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_new_stop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/save_new_stop"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/clear_new_stop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/clear_new_stop"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/new_stop_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

</RelativeLayout>